[package]
name = "rquote"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OtterCodes101/rquote"
description = "A command line tool that prints random quotes. Essentially fortune, but written in Rust."

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
